# camera

./: .gitignore  README.md  REFACTORING_SUMMARY.md  apriltag_to_bev.py  generate_apriltag.py  pyproject.toml  rtsp_pull_test.py  start_rtsp_push.sh
ag/: .gitignore  CLAUDE.md  README.md  pyproject.toml
ag/backend/: __init__.py
ag/backend/rpi_bridge/: __init__.py  (+3 more)
ag/common/: air_ground_bridge.py  protocol.py
ag/config/: calibration.yaml  camera_assets_README.md  gcs_gui.example.json  gcs_gui.json  ground_robot.json  ground_station.json  ground_station.toml  robot_receiver.json  rpi_bridge.json  sky_uav.json
ag/examples/: demo_path.json
ag/gcs_gui/: __init__.py  app_config.py  app_state.py  image_utils.py  main.py  qt_compat.py
ag/ground_robot/: local_sim_client.py  receiver.py
ag/ground_station/: bev_backend.py  config.py  frontend.py  gcs_server.py  grid_map.py  map_editor.py  navigation_backend.py  planning_backend.py  state_machine.py
ag/scripts/: run_gcs_gui.sh  run_ground_robot.sh  run_ground_station.sh  run_robot_receiver.sh  run_rpi_bridge.sh  run_sky_rtsp.sh  run_sky_tcp.sh
ag/sky_uav/: pose_controller.py  rtsp_server.py  tcp_connector.py
ag/tests/: test_bev_backend.py  test_gcs_server.py  test_grid_map.py  test_ground_station_protocol.py  test_loopback_integration.py  test_map_editor.py  test_navigation_backend.py  test_planning_backend.py  test_pose_controller.py  test_protocol.py  test_protocol_and_planner.py  test_state_machine.py
ag/tools/: generate_wiki.py
ag/wiki/: architecture.md  function_index.md  message_flow.md  reading_order.md
(+50 files in other folders)
