[project]
name = "ag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.3"
dependencies = [
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pupil-apriltags>=1.0.4.post11",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
gui = [
    "pyside6>=6.11.0",
]

[tool.uv]
